# mb

./: CMakeLists.txt  README  mb.1
.github/workflows/: gen-readme.yml
src/: encodings.cpp  encodings.h  mb.cpp  mb.h  options.cpp  options.h
src/maildir/: dir.cpp  dir.h  entry.cpp  entry.h
